- Adds multikey signatures.
- Adds Symmetric-Key Encrypted Session Key Packets support.
- Adds TwoFish cipher support.
- Adds ability to determine keys that a message has been encrypted.
- Adds support for custom OpenPGP CFB mode used in Symmetrically Encrypted Data Packets. Fixes #99
- Improves decryption and signed messages validation.
- Fixes partial length packets calculations.
- Fixes reading armored messages without checksum.
- Fixes password protected DSA keys support. #106
- API: Refactor and simplyfy public API of `ObjectivePGP` due to internal improvements.
- API: PGPPartialKeyPublic -> PGPKeyTypePublic
- API: PGPPartialKeySecret -> PGPKeyTypeSecret
- API: Introduces PGPKeyring.

Version 0.9.5
- Methods that get keys as parameter are now class methods, +[ObjectivePGP ...]
- Adds decrypt:usingKeys:....
- Adds Blowfish cipher support.
- Adds user image attribute support.
- Improves verify calls to accept armored data.

Version 0.9.4
- Fixes generation subkeys with passphrase.
- Improves memory usage when reading messages.

Version 0.9.3
- Fixes public key equality checks.
- Ignores invalid/broken signature subpackets.

Version 0.9.2
- Fixes nullability and undefined behaviours issues.
- Fixes issue where subkey should be used to sign for some keys.
- Fixes packets equality issues.
- Improves gnu-dummy support.
- Improves ZIP compression support.
- Sets default key size for key generator to 3072 bits.
- Improves error handling.

Version 0.9.1
- Fixes subkeys generation.
- Adds support for embedded signatures.
- PGPArmor return String now.

Version 0.9
- Fixes keys management (import/export issues).
- Fixes instances equality.
- Fixes partial packets with zero body length.
- Improves objects copying (NSCopying for packets).
- Reverts NSSet collections to NSArray.
- Updates public API (cleanups).
- Updates tests.
- Updates documentations.

Version 0.8
- Adds public and private keys generation feature with PGPKeyGenerator