@@ -16,7 +16,7 @@ NS_ASSUME_NONNULL_BEGIN
 @interface PGPSecretKeyPacket ()
 
 @property (nonatomic, readwrite) PGPS2KUsage s2kUsage;
-@property (nonatomic, /* copy, */ readwrite) PGPS2K *s2k;
+@property (nonatomic, copy, readwrite) PGPS2K *s2k;
 @property (nonatomic, readwrite) PGPSymmetricAlgorithm symmetricAlgorithm;
 @property (nonatomic, copy, nullable, readwrite) NSData *ivData;
 @property (nonatomic, copy) NSArray<PGPMPI *> *secretMPIs; // decrypted MPI
