@@ -6,6 +6,7 @@ Version 0.10.0
 - Adds ability to determine keys that a message has been encrypted.
 - Adds support for custom OpenPGP CFB mode used in Symmetrically Encrypted Data Packets. Fixes #99
 - Improves decryption and signed messages validation.
+- Improves "gnu-dummy" GPG extension support.
 - Fixes partial length packets calculations.
 - Fixes reading armored messages without checksum.
 - Fixes password protected DSA keys support. #106
